# simple-qc

./: .gitignore  2024_shisanling_flux_raw_data.csv  README.md  build.py  build.spec  check_r_path.py  gui_app.py  gui_app.spec  main.py  pyproject.toml  qc_indicators.csv
ARIMA/: arima_imputation.py
config/: constants.py
core/: data_qc.py
data/: 2024_shisanling_flux_raw_data.csv  pm2_5_missing_random_1_rate_0.31.csv
data/manual_missing/2021/: pm2_5_missing_random_1_rate_0.31.csv  shisanling_aqi_20250604112514.csv
processors/: abnormal_data.py  despiking.py  gap_filling.py  md_mad.py  partitioning.py  storage_correction.py  thresholds.py
r_scripts/: __init__.py  r_co2_flux.py  r_gap_fill_all.py  r_gap_fill_par.py
test/: README.md  arima_performance_test.py  quick_arima_test.py
utils/: data_helpers.py  fill_time.py  imports.py  logging.py  validators.py
