[project]
name = "yky-simple-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pyinstaller>=6.14.0",
    "rpy2==3.5.17",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.4",
]
